--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -11,7 +11,7 @@ body{
 }
 
 :root{
-    --primary-color: #0A775F;
+    --primary-color: #0a775f;
     --font-weight-400: 400;
     --font-weight-500: 500;
     --font-weight-700: 700;
