--- a/scss/blocks/_home-hero.scss
+++ b/scss/blocks/_home-hero.scss
@@ -1,3 +1,53 @@
 .hero{
-    box-sizing: border-box;
+    background-color: #F1D3AF;
+    height: 100vh;
+    width: 100%;
+
+    &_wrapper{
+        display: flex;
+        justify-content: space-around;
+        padding-top: 100px;
+    }
+
+    &_content{
+        display: flex;
+        flex-direction: column;
+        width: 32%;
+    }
+
+    &_title{
+        color: #000000;
+        font-weight: var(--font-weight-700);  
+        font-size: 64px;
+        line-height: 75px;
+    }
+
+    &_desc{
+        font-weight: var(--font-weight-400);
+        font-size: 16px;
+        line-height: 24px;
+        margin: 24px 0;
+    }
+
+    &_img{
+        background: url(/img/hero-photo.png) no-repeat;
+        background-size: cover;
+        width: 50%;
+        height: 655px;
+        margin-top: -7%;
+        margin-right: -9.7%;
+        position: relative;
+    }
+
+    &_img::after{
+        content: "";
+        position: absolute;
+        top: -15%;
+        left: -15%;
+        background-image: url(/img/hero-after-img.png);
+        transform: rotate(-25deg);
+        width: 200px;
+        height: 200px;
+    }
 }
+
