--- a/scss/blocks/_home-feature.scss
+++ b/scss/blocks/_home-feature.scss
@@ -75,7 +75,7 @@
     }
     &-button{
         background: #C99B67;
-        margin: 10px auto;
+        margin: 10px auto !important;
     }
     &-border{
         width: 70%;
