--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -29,6 +29,11 @@ body, html, h1, h2, h3, h4, h5, h6, p, div, span{
     color: var(--text-color-white);
     background-color: var(--primary-color);
     border-radius: 100px;
+    font-weight: var(--font-weight-500);
+    font-size: 16px;
+    line-height: 19px;
+    letter-spacing: 1px;
+    font-variant: all-small-caps;
     padding: 16px 24px;
     transition: all .2s ease-in-out;
 }
