--- a/scss/blocks/_home-hero.scss
+++ b/scss/blocks/_home-hero.scss
@@ -3,7 +3,7 @@
 
     &_wrapper{
         display: flex;
-        justify-content: space-around;
+        justify-content: space-between;
         padding-top: 100px;
     }
 
@@ -11,6 +11,7 @@
         display: flex;
         flex-direction: column;
         width: 32%;
+        margin-left: 100px;
     }
 
     &_title{
@@ -32,8 +33,7 @@
         background-size: cover;
         width: 50%;
         height: 655px;
-        margin-top: -7%;
-        margin-right: -9.7%;
+        transform: translateY(-100px);
         position: relative;
     }
 
