hero-section image fixed

--- a/scss/blocks/_home-hero.scss
+++ b/scss/blocks/_home-hero.scss
@@ -32,8 +32,8 @@
         background: url(/img/hero-photo.png) no-repeat;
         background-size: cover;
         width: 50%;
-        height: 655px;
-        transform: translateY(-100px);
+        height: 664px;
+        transform: translateY(-17%);
         position: relative;
     }
 
