--- a/scss/blocks/_blocks.scss
+++ b/scss/blocks/_blocks.scss
@@ -1,10 +1,11 @@
 @import "./header";
+
 @import "./home-hero";
-@import "./home-feature";
 @import "./home-collection";
-
-
-
 @import "./home-promo";
+@import "./home-feature";
+
+@import "./about-hero";
+@import "./about-mission";
 
 @import "./footer";
