about page promo and feature sections' desktop design finished

--- a/scss/blocks/_blocks.scss
+++ b/scss/blocks/_blocks.scss
@@ -2,9 +2,10 @@
 @import "./home-hero";
 @import "./home-feature";
 @import "./home-collection";
-
-
-
 @import "./home-promo";
+
+
+@import "./about-feature";
+@import "./about-promo";
 
 @import "./footer";
