--- a/scss/blocks/_home-hero.scss
+++ b/scss/blocks/_home-hero.scss
@@ -29,16 +29,18 @@
         margin: 24px 0;
     }
 
-    &_img{
-        background: url(/img/hero-photo.png) no-repeat;
-        background-size: 100% 100%;
-        width: 50%;
-        height: 664px;
-        margin-top: -100px;
+    &--img_box{
+        margin-top: -7%;
         position: relative;
+        width: 50%;
+        height: 100%;
+    }
+    &--img{
+        width: 100%;
+        height: 100%;
     }
 
-    &_img::after{
+    &--img_box::after{
         content: "";
         position: absolute;
         top: -15%;
