--- a/scss/blocks/_blocks.scss
+++ b/scss/blocks/_blocks.scss
@@ -7,9 +7,10 @@
 
 @import "./about-hero";
 @import "./about-mission";
-
-
 @import "./about-feature";
 @import "./about-promo";
+
+
+@import "./plan.feature";
 
 @import "./footer";
