--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -40,6 +40,7 @@ body, html, h1, h2, h3, h4, h5, h6, p, div, span{
 
 .button:hover{
     background-color: #075947;
+    cursor: pointer;
 }
 
 a, ul, img{
