--- a/scss/blocks/_plan-coffee-plan.scss
+++ b/scss/blocks/_plan-coffee-plan.scss
@@ -21,6 +21,7 @@
         font-variant: all-small-caps;
         color: #555555;
         margin-bottom: 30px;
+        height: 40px;
     }
 
     &--title:hover{
@@ -155,6 +156,15 @@
     display: flex !important;
 } 
 
+.current{
+    font-weight: 500;
+    font-size: 28px;
+    line-height: 33px;
+    font-variant: all-small-caps;
+    color: #000000;
+    border-bottom: 3px dashed #C99B67;
+    padding-bottom: 5px;
+}
 
 // .coffee_plan::after{
 //     content: "";
@@ -191,13 +201,3 @@
 //     z-index: 10;
 //     transform: translateX(-85px);
 // }
-
-    // .current{
-    //     font-weight: 500;
-    //     font-size: 28px;
-    //     line-height: 33px;
-    //     font-variant: all-small-caps;
-    //     color: #000000;
-    //     border-bottom: 3px dashed #C99B67;
-    //     padding-bottom: 5px;
-    // }
