plan page JS WIP

--- a/scss/blocks/_plan-coffee-plan.scss
+++ b/scss/blocks/_plan-coffee-plan.scss
@@ -137,24 +137,13 @@
     
 }
 
-.coffee_plan--open1 .plan-card1{
+
+.plan-card{
     display: flex !important;
     // justify-content: space-between;
     // align-items: center;
     // margin: 10px 0;
-} 
-.coffee_plan--open2 .plan-card2{
-    display: flex !important;
-} 
-.coffee_plan--open3 .plan-card3{
-    display: flex !important;
-} 
-.coffee_plan--open4 .plan-card4{
-    display: flex !important;
-} 
-.coffee_plan--open5 .plan-card5{
-    display: flex !important;
-} 
+}
 
 .current{
     font-weight: 500;
