--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -7,7 +7,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-    }
+        }
     &-link{
         line-height: 19px;
         font-weight: var(--font-weight-700);
@@ -25,9 +25,20 @@
     &-logo__box{
         display: flex;
         justify-content: space-between;
-        width: 140px;
+        width: 180px;
+        padding: 7px 20px;
+
     }
 }
 .site-footer{
     background-color: #F1D3AF;
+}
+.navbar_logo{
+    padding: 7px 20px;
+}
+@media only screen and (max-width: 918px){
+    .footer-list{
+        display: none;
+    }
+    
 }
