--- a/scss/blocks/_home-feature.scss
+++ b/scss/blocks/_home-feature.scss
@@ -102,3 +102,129 @@
     width: 230px;
     height: 200px;
 }
+
+
+@media only screen and (max-width: 1350px) {
+    .feature{
+        &-card__box{
+            justify-content: space-around;
+        }
+        &-card{
+            width: 31%;
+        }
+    }
+}
+@media only screen and (max-width: 1245px) {
+    .feature{
+        &-card__title{
+            font-size: 35px;
+        }
+        &-title{
+        font-size: 45px;
+        }
+        &::after{
+        width: 200px;
+        height: 180px;
+        }
+    }
+}
+@media only screen and (max-width: 1122px) {
+    .feature{
+        &-card__title{
+            font-size: 30px;
+        }
+        &-card__description{
+            font-size: 15px;
+        }
+        &-title{
+            font-size: 40px;
+        }
+        &::after{
+            width: 190px;
+            height: 170px;
+        }
+
+    }
+}
+@media only screen and (max-width: 970px) {
+    .feature{
+        &-card__title{
+            text-align: center;
+            line-height: 1.3;
+        }
+        &-card__description{
+            text-align: center;
+            line-height: 1.6;
+        }
+        &-title{
+            font-size: 40px;
+        }
+        &::after{
+            width: 180px;
+            height: 160px;
+        }
+
+    }
+}
+@media only screen and (max-width: 970px) {
+    .feature{
+        &-card__title{
+            text-align: center;
+            line-height: 1.3;
+        }
+        &-card__description{
+            text-align: center;
+            line-height: 1.6;
+        }
+        &-title{
+            font-size: 40px;
+        }
+        &::after{
+            width: 180px;
+            height: 160px;
+        }
+        &-card__box{
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-around;
+            height: 1350px;
+    
+        }
+        &-card{
+            position: relative;
+            width: 70%;
+            height: 30%;
+            padding: 35px;
+        }
+        &-card::before{
+            display: none;
+        }
+        &-border{
+            display: none;
+        }
+        &-card__title{
+            text-align: center;
+            line-height: 1.3;
+            font-size: 40px;
+            text-align: left;
+        }
+        &-card__description{
+            text-align: center;
+            line-height: 1.6;
+            font-size: 18px;
+            text-align: left;
+            width: 85%;
+        }
+        &-card__number{
+            margin-bottom: 7%;
+            font-size: 80px;
+        }
+        &-title{
+            font-size: 40px;
+        }
+        &::after{
+            width: 180px;
+            height: 160px;
+        }
+    }
+}
