--- a/scss/blocks/_home-promo.scss
+++ b/scss/blocks/_home-promo.scss
@@ -71,3 +71,52 @@
     width: 148px;
     height: 155px;
 }
+
+@media only screen and (max-width: 1223px){
+    .promo{
+        height: 600px;
+        margin-bottom: 250px;
+
+        &-description{
+            font-size: 16px;
+        }
+        &-card__box{
+            display: flex;
+            justify-content: space-around;
+        }
+
+        &-card{
+            width: 32%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            &__img{
+                width: 95%;
+            }
+            &__description{
+                font-size: 16px;
+                text-align: center;
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 1066px){
+    .promo{
+        height: 550px;
+        margin-bottom: 270px;
+        &-card__box{
+            top: 45%;
+        }
+        &-card{
+            &__description{
+                font-size: 25px;
+            }
+            &__description{
+                font-size: 14px;
+            }
+
+        }
+    }
+}
