--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -48,3 +48,26 @@ a, ul, img{
     list-style: none;
     user-select: none;
 }
+
+@media only screen and (max-width: 1063px){
+    .button{
+        padding: 13px 21px;
+        font-size: 13px;
+    }
+}
+
+@media only screen and (max-width: 876px){
+    .button{
+        padding: 11px 19px;
+        font-size: 11px;
+    }
+}
+
+@media only screen and (max-width: 809px){
+    .hero{
+       .button{
+        padding: 9px 17px;
+        font-size: 9px;
+       }
+    }
+}
