--- a/scss/blocks/_home-collection.scss
+++ b/scss/blocks/_home-collection.scss
@@ -17,7 +17,7 @@
         display: flex;
         flex-direction: column;
         margin-top: 80px;
-        width: 80%;
+        width: 100%;
         margin: 0 auto;
         padding: 70px 0;
     }
@@ -25,19 +25,25 @@
     &_item{
         display: flex;
         align-items: center;
-        justify-content: flex-start;
-        width: 100%;
+        justify-content: space-evenly;
+        width: 85%;
+        margin: auto;
+
+        &--img{
+            width: 30%;
+        }
 
         &--wrapper{
-            width: 100%;
-            margin-left: 120px;
+            width: 35%;
+            // margin-left: 120px;
         }
 
         &--wrapper:nth-child(2n){
-            margin-right: 120px;
+            // margin-right: 120px;
         }
 
         &--title{
+            width: fit-content;
             font-weight: var(--font-weight-500);
             font-size: 48px;
             line-height: 56px;
@@ -47,11 +53,11 @@
         }
 
         &--desc{
+            width: fit-content;
             font-weight: var(--font-weight-400);
             font-size: 22px;
             line-height: 34px;
             color: var(--text-color-primary);
-            width: 90%;
         }
     }
 
