--- a/scss/blocks/_home-hero.scss
+++ b/scss/blocks/_home-hero.scss
@@ -46,9 +46,160 @@
         top: -15%;
         left: -15%;
         background-image: url(/img/hero-after-img.png);
-        transform: rotate(-25deg);
+        background-size: cover;
         width: 200px;
         height: 200px;
     }
 }
+
+@media only screen and (max-width: 1304px){
+        .hero{
+            &_content{
+                width: 33%;
+            }
+
+            &_title{
+                font-size: 60px;
+            }
+
+            &_desc{
+                font-size: 15px;
+            }
+
+            &--img_box{
+                width: 49%;
+            }
+
+            &--img_box::after{
+                width: 190px;
+                height: 190px;
+            }
+        }
+}
+
+@media only screen and (max-width: 1223px){
+    .hero{
+        &_content{
+            width: 34%;
+        }
+
+        &_title{
+            font-size: 57px;
+        }
+
+        &_desc{
+            font-size: 14px;
+        }
+
+        &--img_box{
+            width: 48%;
+        }
+
+        &--img_box::after{
+            width: 180px;
+            height: 180px;
+        }
+    }
+}
+
+@media only screen and (max-width: 1127px){
+    .hero{
+        &_content{
+            width: 35%;
+        }
+
+        &_title{
+            font-size: 55px;
+        }
+
+        &--img_box{
+            width: 47%;
+        }
+
+        &--img_box::after{
+            width: 170px;
+            height: 170px;
+        }
+    }
+}
+
+@media only screen and (max-width: 1063px){
+    .hero{
+        &_content{
+            width: 37%;
+        }
+
+        &_title{
+            font-size: 53px;
+        }
+
+        &_desc{
+            font-size: 13px;
+        }
+
+        &--img_box{
+            width: 46%;
+        }
+
+        &--img_box::after{
+            width: 160px;
+            height: 160px;
+        }
+    }
+}
+
+@media only screen and (max-width: 990px){
+    .hero{
+        &_title{
+            font-size: 47px;
+            line-height: 55px;
+        }
+    }
+}
+
+@media only screen and (max-width: 876px){
+    .hero{
+        &_title{
+            font-size: 45px;
+        }
+
+        &_desc{
+            font-size: 12px;
+        }
+
+        &--img_box{
+            width: 44%;
+        }
+
+        &--img_box::after{
+            width: 150px;
+            height: 150px;
+        }
+    }
+}
+
+@media only screen and (max-width: 809px){
+    .hero{
+        &_title{
+            font-size: 43px;
+        }
+
+        &_desc{
+            font-size: 11px;
+            line-height: 18px;
+            margin: 14px 0;
+        }
+
+        &--img_box{
+            width: 44%;
+        }
+
+        &--img_box::after{
+            width: 140px;
+            height: 140px;
+        }
+    }
+}
+
+
 
