--- a/scss/blocks/_plan-hero.scss
+++ b/scss/blocks/_plan-hero.scss
@@ -46,8 +46,157 @@
         top: -15%;
         left: -15%;
         background-image: url(/img/hero-after-img.png);
-        transform: rotate(-25deg);
+        background-size: cover;
         width: 200px;
         height: 200px;
+    }
+}
+
+@media only screen and (max-width: 1304px){
+    .plan_hero{
+        &--content{
+            width: 33%;
+        }
+
+        &--title{
+            font-size: 60px;
+        }
+
+        &--desc{
+            font-size: 15px;
+        }
+
+        &--img_box{
+            width: 49%;
+        }
+
+        &--img_box::after{
+            width: 190px;
+            height: 190px;
+        }
+    }
+}
+
+@media only screen and (max-width: 1223px){
+    .plan_hero{
+        &--content{
+            width: 34%;
+        }
+
+        &--title{
+            font-size: 57px;
+        }
+
+        &--desc{
+            font-size: 14px;
+        }
+
+        &--img_box{
+            width: 48%;
+        }
+
+        &--img_box::after{
+            width: 180px;
+            height: 180px;
+        }
+    }
+}
+
+@media only screen and (max-width: 1127px){
+    .plan_hero{
+        &--content{
+            width: 35%;
+        }
+
+        &--title{
+            font-size: 55px;
+        }
+
+        &--img_box{
+            width: 47%;
+        }
+
+        &--img_box::after{
+            width: 170px;
+            height: 170px;
+        }
+    }
+}
+
+@media only screen and (max-width: 1063px){
+    .plan_hero{
+        &--content{
+            width: 37%;
+        }
+
+        &--title{
+            font-size: 53px;
+        }
+
+        &--desc{
+            font-size: 13px;
+        }
+
+        &--img_box{
+            width: 46%;
+        }
+
+        &--img_box::after{
+            width: 160px;
+            height: 160px;
+        }
+    }
+}
+
+@media only screen and (max-width: 990px){
+    .plan_hero{
+        &--title{
+            font-size: 47px;
+            line-height: 55px;
+        }
+    }
+}
+
+@media only screen and (max-width: 876px){
+    .plan_hero{
+        &--title{
+            font-size: 45px;
+        }
+
+        &--desc{
+            font-size: 12px;
+        }
+
+        &--img_box{
+            width: 44%;
+        }
+
+        &--img_box::after{
+            width: 150px;
+            height: 150px;
+        }
+    }
+}
+
+@media only screen and (max-width: 809px){
+    .plan_hero{
+        &--title{
+            font-size: 43px;
+        }
+
+        &--desc{
+            font-size: 11px;
+            line-height: 18px;
+            margin: 14px 0;
+        }
+
+        &--img_box{
+            width: 44%;
+        }
+
+        &--img_box::after{
+            width: 140px;
+            height: 140px;
+        }
     }
 }
