--- a/scss/blocks/_home-promo.scss
+++ b/scss/blocks/_home-promo.scss
@@ -24,7 +24,7 @@
         font-weight: 400;
         mix-blend-mode: normal;
         opacity: 0.8;
-        width: 38%;
+        width: 543px;
     }
     &-card__box{
         display: flex;
@@ -100,6 +100,11 @@
                 text-align: center;
             }
         }
+        &::before{
+            top: 32.8%;
+            width: 138px;
+            height: 145px;
+        }
     }
 }
 
@@ -107,26 +112,61 @@
     .promo{
         height: 550px;
         margin-bottom: 270px;
+        &-title{
+            font-size: 40px;
+            margin-bottom: 5px;
+        }
+        &-description{
+            font-size: 14px;
+        }
         &-card__box{
             top: 45%;
         }
         &-card{
             &__description{
+                font-size: 15px;
+                margin-top: 7px;
+            }
+            &__title{
                 font-size: 25px;
-            }
-            &__description{
-                font-size: 14px;
-            }
 
+            }
+        }
+        &::before{
+            top: 37%;
+            width: 123px;
+            height: 130px;
         }
     }
+    
 }
 @media only screen and (max-width: 900px){
     .promo{
         height: 520px;
         margin-bottom: 200px;
+        &-title{
+            font-size: 35px;
+        }
+        &-description{
+            line-height: 1.6;
+        }
         &-card__box{
             top: 50%;
+        }
+        &-card{
+            &__description{
+                font-size: 13px;
+                line-height: 1.7;
+                margin-top: 5px;
+            }
+            &__title{
+                font-size: 23px;
+            }
+        }
+        &::before{
+            top: 42%;
+            width: 113px;
+            height: 120px;
         }
     }
 }
