--- a/scss/blocks/_home-feature.scss
+++ b/scss/blocks/_home-feature.scss
@@ -33,7 +33,7 @@
         &__title{
             font-weight: 500;
             font-size: 40px;
-            line-height: 47px;
+            line-height: 40px;
             width: 60%;
             margin: 8px 0;
             font-variant: all-small-caps;
@@ -168,17 +168,6 @@
 }
 @media only screen and (max-width: 970px) {
     .feature{
-        &-card__title{
-            text-align: center;
-            line-height: 1.3;
-        }
-        &-card__description{
-            text-align: center;
-            line-height: 1.6;
-        }
-        &-title{
-            font-size: 40px;
-        }
         &::after{
             width: 180px;
             height: 160px;
@@ -225,6 +214,50 @@
         &::after{
             width: 180px;
             height: 160px;
+        }
+    }
+}
+
+@media only screen and (max-width: 900px) {
+    .feature{
+        &-title{
+            font-size: 40px;
+        }
+        &-card__title{
+            line-height: 1.2;
+            font-size: 40px;
+        }
+        &-card__description{
+            line-height: 1.4;
+            font-size: 17px;
+
+        }
+        &-card__number{
+            font-size: 70px;
+        }
+    }
+}
+
+@media only screen and (max-width: 780px) {
+    .feature{
+        &-title{
+            font-size: 40px;
+            margin-bottom: 30px !important;
+        }
+        &-card__title{
+            line-height: 1.1;
+            font-size: 30px;
+        }
+        &-card__description{
+            line-height: 1.5;
+            font-size: 15px;
+
+        }
+        &-card__number{
+            font-size: 70px;
+        }
+        &::after{
+        display: none;
         }
     }
 }
