--- a/scss/blocks/_home-promo.scss
+++ b/scss/blocks/_home-promo.scss
@@ -100,6 +100,11 @@
                 text-align: center;
             }
         }
+        &-card__info{
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+        }
         &::before{
             top: 32.8%;
             width: 138px;
@@ -170,6 +175,53 @@
         }
     }
 }
+@media only screen and (max-width: 780px){
+    .promo{
+        height: fit-content;
+        margin: 0;
+        &-card__box{
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            position: static;
+            height: fit-content;
+        }
+        &-card{
+            width: 100%;
+            flex-direction: row;
+            justify-content: space-evenly;
+            margin: 15px 0;
+            &__img{
+                width: 40%;
+                border-radius: 20px;
+            }
+            &__info{
+                width: 50%;
+            }
+    
+            &__title{
+                color: var(--text-color-white);
+                font-size: 27px;
+                margin-bottom: 10px;
+                text-align: center;
+                line-height: 1.2;
+                width: 100%;
+            }
+            &__description{
+                width: 100%;
+                font-size: 15px;
+                color: var(--text-color-white);
+            }
+            &:first-child{
+                margin-top: 50px;
+            }
+        }
+    
+    &::before{
+        display: none;
+    }
+    }
+}
 
 @media only screen and (max-width: 690px){
     .promo{
@@ -179,6 +231,67 @@
         &-description{
             line-height: 1.6;
             width: 80%;
+        }
+    }
+}
+
+@media only screen and (max-width: 600px){
+    .promo{
+        &-card{
+            margin: 15px 0;
+            &__title{
+                font-size: 24px;
+                margin-bottom: 7px;
+            }
+            &__description{
+                font-size: 12px;
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 500px){
+    .promo{
+        &-card{
+            flex-direction: column;
+            &__info{
+                width: 85%;
+            }
+            &__title{
+                font-size: 27px;
+                margin-bottom: 7px;
+            }
+            &__description{
+                font-size: 14px;
+            }
+            &__img{
+                width: 80%;
+                border-radius: 0;
+            }
+        }
+    }
+}
+@media only screen and (max-width: 430px){
+    .promo{
+        &-title{
+            font-size: 28px;
+        }
+        &-description{
+            font-size: 13px;
+            line-height: 1.3;
+        }
+        &-card{
+            &__title{
+                font-size: 24px;
+                margin-bottom: 2px;
+            }
+            &__description{
+                font-size: 12px;
+            }
+            &__img{
+                width: 80%;
+                border-radius: 0;
+            }
         }
     }
 }
