home page features section mobile version done

--- a/scss/blocks/_home-feature.scss
+++ b/scss/blocks/_home-feature.scss
@@ -261,3 +261,50 @@
         }
     }
 }
+@media only screen and (max-width: 600px) {
+    .feature{
+        &-title{
+            font-size: 33px;
+            margin-bottom: 0px !important;
+        }
+        &-card__title{
+            line-height: 1.1;
+            font-size: 27px;
+        }
+        &-card__description{
+            line-height: 1.5;
+            font-size: 13px;
+
+        }
+        &-card__number{
+            font-size: 60px;
+        }
+    }
+}
+@media only screen and (max-width: 500px) {
+    .feature{
+        &-title{
+            font-size: 30px;
+        }
+        &-card__title{
+            width: 100%;
+        }
+        &-card__description{
+            width: 100%;
+        }
+        &-card__number{
+            font-size: 50px;
+        }
+    }
+}
+@media only screen and (max-width: 420px) {
+    .feature{
+        &-title{
+            font-size: 27px;
+        }
+        &-card__title{
+            width: 100%;
+            font-size: 25px;
+        }
+    }
+}
