--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -40,5 +40,52 @@
     .footer-list{
         display: none;
     }
+    .footer{
+        padding: 20px 0;
+        &-logo__box{
+            width: 150px;
+        }
+        &-logos{
+            width: 25px;
+            height: 25px;
+        }
+    }
+    .navbar_logo{
+        width: 250px;
+    }
+    
+}
+
+@media only screen and (max-width: 600px){
+    .footer{
+        padding: 15px 0;
+        &-logo__box{
+            width: 140px;
+        }
+        &-logos{
+            width: 22px;
+            height: 22px;
+        }
+    }
+    .navbar_logo{
+        width: 220px;
+    }
+    
+}
+
+@media only screen and (max-width: 400px){
+    .footer{
+        padding: 10px 0;
+        &-logo__box{
+            width: 120px;
+        }
+        &-logos{
+            width: 20px;
+            height: 20px;
+        }
+    }
+    .navbar_logo{
+        width: 180px;
+    }
     
 }
