--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -43,6 +43,9 @@
 }
 
 @media only screen and (max-width: 780px) {
+    .header{
+        padding: 20px;
+    }
 
     .navbar_list{
         display: none;
@@ -81,4 +84,15 @@
         background-color: #F3D7B7;
     }
     
+}
+
+@media only screen and (max-width: 600px){
+    .header{
+        padding: 15px;
+    }
+}
+@media only screen and (max-width: 500px){
+    .header{
+        padding: 10px;
+    }
 }
