home-page made tablet friendly

--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -45,6 +45,7 @@
 @media only screen and (max-width: 780px) {
     .header{
         padding: 20px;
+        // padding-bottom: 35px;
     }
 
     .navbar_list{
