home page made tablet and mobile friendly 90%

--- a/scss/blocks/_home-collection.scss
+++ b/scss/blocks/_home-collection.scss
@@ -383,3 +383,138 @@
         }
     }
 }
+
+@media only screen and (max-width: 631px){
+    .collection::after{
+        width: 71px;
+        height: 121px;
+    }
+    
+    .collection::before{
+        width: 59px;
+        height: 208px;
+    }
+    
+    .collection_item::before{
+        width: 45px;
+        height: 105px;
+    }
+
+    .collection{
+        &_title{
+            font-size: 31px;
+            line-height: 39px;
+            padding-top: 27px;
+        }
+
+        &_wrapper{
+            padding: 20px 0;
+        }
+
+        &_item{
+            margin-bottom: 10px;
+
+            &--title{
+                font-size: 27px;
+                line-height: 33px;
+            }
+
+            &--desc{
+                font-size: 12px;
+                line-height: 21px;
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 600px){
+    .collection::after{
+        width: 71px;
+        height: 121px;
+    }
+    
+    .collection::before{
+        width: 59px;
+        height: 208px;
+    }
+    
+    .collection_item::before{
+        width: 45px;
+        height: 105px;
+    }
+
+    .collection{
+        &_title{
+            font-size: 35px;
+            line-height: 41px;
+            padding-top: 30px;
+        }
+
+        &_wrapper{
+            padding: 20px 0;
+        }
+
+        &_item{
+            width: 100%;
+            
+            &--img{
+                width: 75%;
+            }
+
+            &--wrapper_right{
+                width: 75%;
+            }
+
+            &--wrapper_left{
+                width: 75%;
+            }
+
+            &--title{
+                font-size: 33px;
+                line-height: 39px;
+            }
+
+            &--desc{
+                font-size: 15px;
+                line-height: 23px;
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 500px){
+    .collection::after{
+        width: 51px;
+        height: 101px;
+    }
+    
+    .collection::before{
+        width: 50px;
+        height: 158px;
+    }
+    
+    .collection_item::before{
+        width: 40px;
+        height: 75px;
+    }
+
+    .collection{
+        &_title{
+            font-size: 29px;
+            line-height: 33px;
+            padding-top: 17px;
+        }
+
+        &_item{
+            &--title{
+                font-size: 25px;
+                line-height: 33px;
+            }
+
+            &--desc{
+                font-size: 12px;
+                line-height: 17px;
+            }
+        }
+    }
+}
