--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -85,3 +85,25 @@ a, ul, img{
        }
     }
 }
+
+@media only screen and (max-width: 631px){
+    .hero{
+       .button{
+        width: 100%;
+        padding: 15px 21px;
+        font-size: 13px;
+        border-radius: 17px;
+       }
+    }
+}
+
+@media only screen and (max-width: 506px){
+    .hero{
+       .button{
+        width: 100%;
+        padding: 13px 19px;
+        font-size: 11px;
+        border-radius: 17px;
+       }
+    }
+}
