--- a/scss/blocks/_home-hero.scss
+++ b/scss/blocks/_home-hero.scss
@@ -261,7 +261,7 @@
 @media only screen and (max-width: 657px){
     .hero{
         &_content{
-            margin-left: 70px;
+            margin-left: 75px;
         }
 
         &_title{
@@ -285,6 +285,96 @@
         }
     }
 }
+
+@media only screen and (max-width: 631px){
+    .hero{
+        &_wrapper{
+            flex-direction: column-reverse;
+            justify-content: center;
+            align-items: center;
+            padding: 20px 0;
+        }
+
+        &_content{
+            width: 80%;
+            align-items: center;
+            text-align: center;
+            margin: 10px 0 0 0;
+        }
+
+        &_title{
+            font-size: 35px;
+            line-height: 45px;
+        }
+
+        &_desc{
+            font-size: 13px;
+            line-height: 21px;
+            margin: 13px 0;
+        }
+
+        &--img_box{
+            width: 80%;
+        }
+
+        &--img{
+            border-radius: 20px;
+        }
+
+        &--img_box::after{
+           display: none;
+        }
+    }
+}
+
+@media only screen and (max-width: 590px){
+    .hero{
+        &_title{
+            font-size: 33px;
+            line-height: 41px;
+        }
+
+        &_desc{
+            font-size: 11px;
+            line-height: 19px;
+            margin: 11px 0;
+        }
+    }
+}
+
+@media only screen and (max-width: 557px){
+    .hero{
+        &_title{
+            font-size: 30px;
+            line-height: 35px;
+        }
+    }
+}
+
+@media only screen and (max-width: 506px){
+    .hero{
+        &_title{
+            font-size: 27px;
+            line-height: 30px;
+        }
+    }
+}
+
+@media only screen and (max-width: 455px){
+    .hero{
+        &_title{
+            font-size: 25px;
+            line-height: 27px;
+        }
+
+        &_desc{
+            font-size: 10px;
+            line-height: 17px;
+            margin: 10px 0;
+        }
+    }
+}
+
 
 
 
