--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -79,7 +79,7 @@
         width: 40px;
         height: 30px;
         &--line{
-            width: 100%;
+            width: 35px;
             height: 11%;
             background: #000;
         }
