home page responsive done

--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -70,16 +70,16 @@
         text-align: center;
     }
     .header_toggler{
-        margin-right: 3%;
+        margin-right: 10px;
         background:  #F1D3AF;
         border: 0;
         display: flex;
         flex-direction: column;
         justify-content: space-around;
         width: 40px;
-        height: 30px;
+        height: 24px;
         &--line{
-            width: 35px;
+            width: 30px;
             height: 11%;
             background: #000;
         }
