--- a/scss/blocks/_about-promo.scss
+++ b/scss/blocks/_about-promo.scss
@@ -153,3 +153,62 @@
         }
     }
 }
+
+@media only screen and (max-width: 660px) {
+    .about__promo{
+        margin-top: 10%;
+        &-title{
+            font-size: 35px;
+            margin-bottom: 20px;
+        }
+        &-description{
+            font-size: 13px;
+    }
+    &-img{
+        top: -25%;
+    }
+}
+}
+@media only screen and (max-width: 569px) {
+    .about__promo{
+        margin-top: 180px;
+        &-title{
+            font-size: 32px;
+        }
+        &-img{
+            top: -55%;
+            left: 4%;
+            width: 100%;
+        }
+}
+}
+
+@media only screen and (max-width: 535px) {
+.about__promo{
+    margin-top: 200px;
+    &-title{
+        font-size: 32px;
+    }
+    &-img{
+        top: -80%;
+        left: 4%;
+        width: 100%;
+    }
+}
+}
+@media only screen and (max-width: 535px) {
+.about__promo{
+    margin-top: 130px;
+    &-title{
+        font-size: 28px;
+    }
+    &-description{
+        font-size: 12px;
+    }
+    &-img{
+        top: -45%;
+        left: 4%;
+        width: 100%;
+    }
+}
+}
