--- a/scss/blocks/_about-hero.scss
+++ b/scss/blocks/_about-hero.scss
@@ -77,7 +77,7 @@
 }
 
 @media only screen and (max-width: 1263px){
-    .about_about_hero{
+    .about_hero{
         &--content{
             width: 34%;
         }
